--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 .idea/django-rest-practice-project.iml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
@@ -6,3 +5,4 @@
 .idea/modules.xml
 .idea/vcs.xml
 .idea/workspace.xml
+*.pyc
